--- a/Homework/HW_2/tex/chapter_6.tex
+++ b/Homework/HW_2/tex/chapter_6.tex
@@ -1,1 +1,178 @@
 \section{Chapter 6}
+\subsection{6.1}
+\begin{itemize}
+    \item[2.]  An office building contains 27 floors and has 37 offices
+          on each floor. How many offices are in the building? \\
+          \answer \\
+          $27 \cdot 37 = 999$
+
+    \item[8.]  How many different three-letter initials with none of the
+          letters repeated can people have? \\
+          \answer \\
+          $26 \cdot 25 \cdot 24 = 15600$
+
+    \item[30.]  How many license plates can be made using either three
+          uppercase English letters followed by three digits or four
+          uppercase English letters followed by two digits? \\
+          \answer\\
+          $26^3 \cdot 10^3 + 26^4 \cdot 10^2 = 63273600$
+
+    \item[40.] How many subsets of a set with 100 elements have more
+          than one element?\\
+          \answer \\
+          $2^{100} -1$
+
+    \item[44.]  How many ways are there to seat four of a group of ten
+          people around a circular table where two seatings are con-
+          sidered the same when everyone has the same immediate
+          left and immediate right neighbor? \\
+          \answer \\
+          $\frac{10 \cdot 9 \cdot 8 \cdot 7}{4} = 1260$
+
+\end{itemize}
+
+\subsection{6.2}
+\begin{itemize}
+    \item[2.]  Show that if there are 30 students in a class, then at least
+          two have last names that begin with the same letter. \\
+          \answer \\
+          Since there are on 26 letters in the English alphabet, then if there are more
+          than 26 students then at least 2 will have the same first letter in there last name.
+
+    \item[4.] A bowl contains 10 red balls and 10 blue balls. A woman
+          selects balls at random without looking at them.
+          \begin{enumerate}[a.]
+              \item How many balls must she select to be sure of having at least three balls of the same color?
+              \item How many balls must she select to be sure of having at least three blue balls?
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item 13
+              \item 13
+          \end{enumerate}
+
+    \item[8.]  Show that if $f$ is a function from $S$ to $T$ , where $S$ and $T$
+          are finite sets with $|S| > |T|$, then there are elements $s_1$
+          and $s_2$ in $S$ such that $f(s_1 ) = f (s_2)$, or in other words, $f$
+          is not one-to-one. \\
+          \answer \\
+          There are more elements in the domain than the codomain so by the pidgeon hole
+          principle there must be 2 or more elements from the domain that map to the
+          same element in the codomain thus the functin can't be one-to-one.
+
+    \item[18.]  Suppose that there are nine students in a discrete mathe-
+          matics class at a small college.
+          \begin{enumerate}[a.]
+              \item Show that the class must have at least five male students or at least five female students.
+              \item Show that the class must have at least three male students or at least seven female students.
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item If there are 4 of one there must be 5 of the other.
+              \item If there are only 2 male students then there must be $9 - 2 = 7 \geq 7$ female students
+                    and if there are only 6 female students then there must be $9 - 6 = 3 \geq 3$ male students.
+          \end{enumerate}
+
+\end{itemize}
+
+
+\subsection{6.3}
+%TODO: 6.3 – 4, 6, 10, 12
+\begin{itemize}
+    \item[4.]Let $S = \{1, 2, 3, 4, 5\}$.
+          \begin{enumerate}[a.]
+              \item List all the 3-permutations of S.
+              \item List all the 3-combinations of S.
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item 123, 124, 125, 132, 134, 135, 142, 143, 145, 152, 153, 154,
+                    213, 214, 215, 231, 234, 235, 241, 243, 245, 251, 253, 254, 312, 314, 315,
+                    321, 324, 325, 341, 342, 345, 351, 352, 354, 412, 413, 415, 421, 423, 425,
+                    431, 432, 435, 451, 452, 453, 512, 513, 514, 521, 523, 524, 531, 532, 534,
+                    541, 542, 543
+              \item 123, 124, 125, 134, 135, 145, 234, 235, 245, 345
+          \end{enumerate}
+
+    \item[6.]  Find the value of each of these quantities.
+          \begin{enumerate}
+              \item C(5, 1)
+              \item C(5, 3)
+              \item C(8, 4)
+              \item C(8, 8)
+              \item C(8, 0)
+              \item C(12, 6)
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item 5
+              \item 10
+              \item 70
+              \item 1
+              \item 1
+              \item 924
+          \end{enumerate}
+
+    \item[10.]  There are six different candidates for governor of a state.
+          In how many different orders can the names of the can-
+          didates be printed on a ballot? \\
+          \answer \\
+          $6! = 720$ different orders.
+
+    \item[12.]
+\end{itemize}  How many bit strings of length 12 contain
+\begin{enumerate}[a.]
+    \item exactly three 1s?
+    \item at most three 1s?
+    \item at least three 1s?
+    \item an equal number of 0s and 1s?
+\end{enumerate}
+\answer
+\begin{enumerate}[a.]
+    \item C(12, 3) = 220
+    \item C(12, 0) + C(12, 1) + C(12, 2) + C(12, 3) = 299
+    \item $\sum_{n=3}^{12} C(12, n) = 4017$
+    \item C(12, 6) = 924
+\end{enumerate}
+
+
+\subsection{6.4}
+\begin{itemize}
+    \item[2.]  Find the expansion of $(x + y)^5$
+          \begin{enumerate}[a.]
+              \item using combinatorial reasoning, as in Example 1.
+              \item using the binomial theorem.
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item So $(x+y)^5 = (x+y)(x+y)(x+y)(x+y)(x+y)$ gives, $x^5,\ x^4y,\ x^3y^2,\ x^2y^3,\ xy^4,\ \text{and } y^5$ as the terms. 
+              To get $x^5$ and $y^5$ the only way is to chose $x$ from all 5 or $y$ 
+              from all 5 so they will both have 1 as their coefficient. To get $x^4y$ 
+              x must be chosen from 4 of the 5 sums so it is 5 choose 4 which is 5, 
+              so $x^4y$ must have a coefficient of 5 and then same for $xy^4$ by the same
+              argument for the $y$. Then for $x^3y^2$ and $x^2y^3$ we choose 3 or 2 from
+              the 5 sums, which is 10 so those will have coefficients of 10.
+              \item Binomial Theorem:
+              \begin{equation*}
+                  (x+y)^n = \sum_{j=0}^{n} {n \choose j}x^{n-j}y^j 
+              \end{equation*}
+              So it's ${5 \choose 0} = 1$ for $x^5$, ${5 \choose 1} = 5$ for $x^4y$, ${5 \choose 2} = 10$ for $x^3y^2$, ${5 \choose 3} = 10$ for $x^2y^3$, 
+              ${5 \choose 4} = 5$ for $xy^4$ and ${5 \choose 5} =1$ for $y^5$.
+          \end{enumerate}
+\item[6.]  What is the coefficient of $x^7$ in $(1 + x)^{11}$? \\
+\answer \\
+${11 \choose 7} = 330$
+
+\item[8.] What is the coefficient of $x^8y^9$ in the expansion of
+$(3x + 2y)^{17}$? \\
+\answer \\
+${17 \choose 8} \cdot 3 \cdot 2 = 145860$
+
+\item[12.]  The row of Pascal’s triangle containing the binomial coefficients ${10 \choose k}, 0 \leq k \leq 10$ \\
+1 10 45 120 210 252 210 120 45 10 1 \\
+Use Pascal’s identity to produce the row immediately fol-
+lowing this row in Pascal’s triangle. \\
+\answer \\
+1 11 55 165 330 362 362 330 165 55 11 1
+
+\end{itemize}
