--- a/Homework/HW_2/tex/chapter_8.tex
+++ b/Homework/HW_2/tex/chapter_8.tex
@@ -1,1 +1,77 @@
 \section{Chapter 8}
+\subsection{8.1}
+\begin{itemize}
+    \item[8.]
+          \begin{enumerate}[a.]
+              \item Find a recurrence relation for the number of bit strings of length n that contain three consecutive 0s.
+              \item What are the initial conditions?
+              \item How many bit strings of length seven contain three consecutive 0s?
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item Let $a_n$ be the number of bit strings with 3 consecutive zeros.\\
+                    \textbf{Case 1:} Bit string with length $n$ ends with a 1. Then there
+                    are $a_{n-1}$ bit strings of length $n$ with 3 consecutive zeros. \\
+                    \textbf{Case 2:} Bit string with length $n$ that ends with 1 0. There
+                    are $a_{n-2}$ bit strings of length $n$ with 3 consecutive zeros. \\
+                    \textbf{Case 3:} Bit string with length $n$ that ends with 1 0 0. There
+                    are $a_{n-3}$ bit strings of length $n$ with 3 consecutive zeros. \\
+                    \textbf{Case 4:} Bit strings with length $n$ that ends with 0 0 0. There
+                    are $2^{n-3}$ bit strings of length $n$ with 3 consecutive zeros. \\
+                    So $a_n = a_{n-1} + a_{n-2} + a_{n-3} + 2^{n-3}$
+              \item $a_0 = 0$ \\
+                    $a_1 = 0$ \\
+                    $a_2 = 0$ \\
+
+              \item $a_0 = 0$ \\
+                    $a_1 = 0$ \\
+                    $a_2 = 0$ \\
+                    $a_3 = 1$ \\
+                    $a_4 = 1 + 0 + 0 + 2^1 = 3$ \\
+                    $a_5 = 3 + 1 + 0 + 2^2 = 8$ \\
+                    $a_6 = 8 + 3 + 1 + 2^3 = 20$ \\
+                    $a_7 = 20 + 8 + 3 + 2^4 = 47$
+          \end{enumerate}
+\end{itemize}
+
+\subsection{8.3}
+%TODO: 8, 10, 14, 16
+\begin{itemize}
+    \item[8.]  Suppose that $f(n) = 2f(n/2) + 3$ when $n$ is an even positive integer, and $f(1) = 5$. Find
+          \begin{enumerate}[a.]
+              \item $f (2)$.
+              \item $f (8)$.
+              \item $f (64)$.
+              \item $f (1024)$.
+          \end{enumerate}
+          \answer
+          \begin{enumerate}[a.]
+              \item 13
+              \item 61
+              \item 509
+              \item 8189
+          \end{enumerate}
+
+    \item[10.] Find $f(n)$ when $n = 2^k$
+          , where $f$ satisfies the recurrence
+          relation $f(n) = f (n/2) + 1$ with $f(1) = 1$. \\
+          \answer \\
+          $f(n) = \log_2(n) + 1 = k+1$
+
+    \item[14.] Suppose that there are $n = 2^k$ teams in an elimination
+          tournament, where there are n/2 games in the first round,
+          with the $n/2 = 2^{k-1}$ winners playing in the second round,
+          and so on. Develop a recurrence relation for the number
+          of rounds in the tournament. \\
+          \answer \\
+          $f(n) = f(n/2) + 1, \ f(1) =0$
+
+    \item[16.] Solve the recurrence relation for the number of rounds in
+          the tournament described in Exercise 14. \\
+          \answer \\
+          $f(n) = \log_2(n) = k$
+
+
+
+
+\end{itemize}
