--- a/Homework/HW_2/mystyle.sty
+++ b/Homework/HW_2/mystyle.sty
@@ -5,6 +5,7 @@
 \usepackage{longtable}
 \usepackage{amsthm}
 \usepackage{graphicx}
+\usepackage{xcolor}
 \graphicspath{ {./img/} }
 \usepackage[margin=0.5in]{geometry} %used to set the margins
 \setcounter{secnumdepth}{0} %used to get rid of section numbers
