--- a/Homework/HW_2/tex/chapter_6.tex
+++ b/Homework/HW_2/tex/chapter_6.tex
@@ -20,7 +20,7 @@
     \item[40.] How many subsets of a set with 100 elements have more
           than one element?\\
           \answer \\
-          $2^{100} -1$
+          $2^{100} -101$
 
     \item[44.]  How many ways are there to seat four of a group of ten
           people around a circular table where two seatings are con-
@@ -47,7 +47,8 @@
           \end{enumerate}
           \answer
           \begin{enumerate}[a.]
-              \item 13
+              \item 13 \\
+              {\color{red} This is wrong, should be 5 balls, $\lceil 5/2 \rceil = 3$ balls that have the same color.}
               \item 13
           \end{enumerate}
 
@@ -77,7 +78,6 @@
 
 
 \subsection{6.3}
-%TODO: 6.3 – 4, 6, 10, 12
 \begin{itemize}
     \item[4.]Let $S = \{1, 2, 3, 4, 5\}$.
           \begin{enumerate}[a.]
@@ -119,8 +119,7 @@
           \answer \\
           $6! = 720$ different orders.
 
-    \item[12.]
-\end{itemize}  How many bit strings of length 12 contain
+    \item[12.] How many bit strings of length 12 contain
 \begin{enumerate}[a.]
     \item exactly three 1s?
     \item at most three 1s?
@@ -134,6 +133,7 @@
     \item $\sum_{n=3}^{12} C(12, n) = 4017$
     \item C(12, 6) = 924
 \end{enumerate}
+\end{itemize}
 
 
 \subsection{6.4}
