More corrections + Made HW 3 stuff

--- a/Homework/HW_2/tex/chapter_6.tex
+++ b/Homework/HW_2/tex/chapter_6.tex
@@ -166,13 +166,15 @@ ${11 \choose 7} = 330$
 \item[8.] What is the coefficient of $x^8y^9$ in the expansion of
 $(3x + 2y)^{17}$? \\
 \answer \\
-${17 \choose 8} \cdot 3 \cdot 2 = 145860$
+${17 \choose 8} \cdot 3 \cdot 2 = 145860$ \\
+{\color{red} This is wrong should be ${17 \choose 8} \cdot 3^8 \cdot 2^9 $}
 
 \item[12.]  The row of Pascal’s triangle containing the binomial coefficients ${10 \choose k}, 0 \leq k \leq 10$ \\
 1 10 45 120 210 252 210 120 45 10 1 \\
 Use Pascal’s identity to produce the row immediately fol-
 lowing this row in Pascal’s triangle. \\
 \answer \\
-1 11 55 165 330 362 362 330 165 55 11 1
+1 11 55 165 330 362 362 330 165 55 11 1 \\
+{\color{red} Don't add wrong, you tard, should be 462}
 
 \end{itemize}
