--- a/Homework/HW_2/tex/chapter_7.tex
+++ b/Homework/HW_2/tex/chapter_7.tex
@@ -42,7 +42,8 @@
           is rolled, if a 3 is twice as likely to appear as each of the
           other five numbers on the die. \\
           \answer \\
-          P(3) = 2/5 and the rest is 1/15 each.
+          P(3) = 2/5 and the rest is 1/15 each. \\
+          {\color{red} This is wrong should be P(1) = P(2) = P(4) = P(5) = P(6) = x, then P(3) = 2x then 7x = 1, x = 1/7, P(3) = 2/7)}
 
     \item[6.]  What is the probability of these events when we randomly
           select a permutation of {1, 2, 3}?
@@ -79,13 +80,13 @@
           $p(E \cap F) = 1/2^5$ since there is only 1 sequence of flips that is 1 tails
           out of $2^5$ combinations. So $p(E|F) = (1/32)/(1/2)= 1/16$
 
-    \item[26.]  Let E be the event that a randomly generated bit string
-          of length three contains an odd number of 1s, and let F
-          be the event that the string starts with 1. Are E and F
+    \item[26.]  Let $E$ be the event that a randomly generated bit string
+          of length three contains an odd number of 1s, and let $F$
+          be the event that the string starts with 1. Are $E$ and $F$
           independent? \\
           \answer \\
           $p(E) = \left({3 \choose 1} + {3 \choose 3}\right) /2^3 = 1/2$ \\
-          $p(F) = 2^2/2^3 = 1/2$ \\
-          $p(E \cap F) = 2/8 = 1/4 = p(E) \cdot p(F)$ \\
-          Thus E and F are independent.
+          $p(F) = 2^2/2^3= 1/2$ \\
+:          $p(E \cap F) = 2/8 = 1/4 = p(E) \cdot p(F)$ \\
+          Thus $E$ and $F$ are independent.
 \end{itemize}
