--- a/Homework/HW_3/tex/chapter_10.tex
+++ b/Homework/HW_3/tex/chapter_10.tex
@@ -33,7 +33,6 @@ determine the type of graph in Table 1 this graph is.
 \end{itemize}
 
 \subsection{10.2}
-%TODO: 10.2 – 6, 14, 20, 58
 \begin{itemize}
       \item[6.] Show that the sum, over the set of people at a party, of
             the number of people a person has shaken hands with, is
@@ -79,7 +78,9 @@ determine the type of graph in Table 1 this graph is.
             \end{enumerate}
       \item[58.] Find the union of the given pair of simple
             graphs. (Assume edges with the same endpoints are the same.) \\
-            \includegraphics[]{img/10_2_58Q_graph.png}
+            \includegraphics[]{img/10_2_58Q_graph.png}\\
+            \answer \\
+            \includegraphics[scale = 0.65]{img/10_2_58A_graph.png}
 
 
 
