--- a/Homework/HW_3/mystyle.sty
+++ b/Homework/HW_3/mystyle.sty
@@ -5,6 +5,7 @@
 \usepackage{longtable}
 \usepackage{amsthm}
 \usepackage{graphicx}
+\usepackage{tasks}
 \usepackage{xcolor}
 \graphicspath{ {./img/} }
 \usepackage[margin=0.5in]{geometry} %used to set the margins
