More work on ch 11

--- a/Homework/HW_3/tex/chapter_11.tex
+++ b/Homework/HW_3/tex/chapter_11.tex
@@ -97,7 +97,9 @@ in Exercise 8 visited using a postorder traversal?\\
 \answer \\
 \textit{d, i, m, n, o, j, e, b, f, g, k, p, l, h, c, a}
 
-\item[16.] 
+\item[16.] Represent the expression
+ $((x + 2) \uparrow 3) \cdot (y -(3 + x)) - 5$ using a binary tree.
+
 
 
 \end{itemize}
