Finished up loose ends and ch. 11

--- a/Homework/HW_3/tex/chapter_10.tex
+++ b/Homework/HW_3/tex/chapter_10.tex
@@ -73,8 +73,8 @@ determine the type of graph in Table 1 this graph is.
                         \includegraphics[scale=0.7]{img/10_2_20d_graph.png}
                   \item \text{}\\
                         \includegraphics[scale=0.7]{img/10_2_20e_graph.png}
-                  \item \text{}\\ %TODO: Make 4D hypercube
-                        \includegraphics[scale=0.7]{img/10_2_20e_graph.png}
+                  \item \text{}\\ 
+                        \includegraphics[scale=0.7]{img/10_2_20f_graph.png}
             \end{enumerate}
       \item[58.] Find the union of the given pair of simple
             graphs. (Assume edges with the same endpoints are the same.) \\
@@ -156,7 +156,6 @@ For 2 and 4 use an adjacency list to represent the given graph.
             $
 
       \item[26.]  Use an incidence matrix to represent the graphs in Exercises 1 and 2.
-            %TODO: Should probably label the edges.
             \begin{tasks}(2)
                   \task \text{}\\
                   \includegraphics[scale = 0.7]{img/10_3_1_graph.png}
@@ -203,7 +202,6 @@ argument that none exists.
 \end{itemize}
 
 \subsection{10.4}
-%TODO: 10.4 – 2, 8, 14
 \begin{itemize}
       \item[2.]  Does each of these lists of vertices form a path in the
             following graph? Which paths are simple? Which are circuits? What are
