--- a/Homework/HW_3/tex/chapter_9.tex
+++ b/Homework/HW_3/tex/chapter_9.tex
@@ -1,9 +1,7 @@
 \section{Chapter 9}
 \subsection{9.1}
-%TODO: 9.1 –2, 10
 \begin{itemize}
     \item[2.]
-          %! NEED TO GIVE GRAPH AND TABULAR FORM
           \begin{enumerate}[a.]
               \item List all the ordered pairs in the relation $R = \{(a, b) \mid a \text{ divides } b\}$ on the set $\{1, 2, 3, 4, 5, 6\}$.
               \item Display this relation graphically, as was done in Example 4.
@@ -12,6 +10,18 @@
           \answer
           \begin{enumerate}[a.]
               \item $\{(1,1),\ (1,2),\ (1,3),\ (1,4),\ (1,5),\ (1,6),\ (2,2),\ (2,4),\ (2,6),\ (3,3),\ (3,6),\ (4,4),\ (5,5)\ (6,6)\}$
+              \item \text{}\\
+              \includegraphics[scale=0.6]{img/9_1_2_graph.png}
+              \item \begin{tabular}{r|*{6}{c}}
+                          & 1 & 2 & 3 & 4 & 5 & 6 \\
+                        \hline
+                        1 & x & x & x & x & x & x \\
+                        2 &   & x &   & x &   & x \\
+                        3 &   &   & x &   &   & x \\
+                        4 &   &   &   & x &   &   \\
+                        5 &   &   &   &   & x &   \\
+                        6 &   &   &   &   &   & x
+                    \end{tabular}
           \end{enumerate}
     \item[4.]  Determine whether the relation R on the set of all people
           is reflexive, symmetric, antisymmetric, and/or transitive,
@@ -35,10 +45,9 @@
               \item neither symmetric nor antisymmetric.
           \end{enumerate}
           \answer
-          %! NEED TO GIVE ACTUAL RELATION
           \begin{enumerate}[a.]
-              \item A relation where the number maps to only itself
-              \item Set \{1,2,3,4\} R = \{(1,2), (2,1)\}
+              \item Set \{1,2,3,4\} R = \{(1,1), (2,2), (3,3), (4,4)\}
+              \item Set \{1,2,3,4\} R = \{(1,1), (1,2), (2,1)\}
           \end{enumerate}
 \end{itemize}
 
@@ -172,7 +181,7 @@
               \item equivalence relation
               \item missing transitive
               \item missing transitive
-              \item missing transitive  
+              \item missing transitive
           \end{enumerate}
 
 \end{itemize}
